--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ requires-python = ">= 3.9"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = [
-    "ruff~=0.3.5",
-    "pytest~=8.1.1",
+    "ruff~=0.6",
+    "pytest~=8.0",
 ]
 
 [tool.hatch.metadata]
